[package]
name = "ltc_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
axum-macros = "0.4"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
dirs = "5"
tower-http = { version = "0.5", features = ["trace"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
futures = "0.3"
rand = "0.8"
hex = "0.4"
ripemd = "0.1"
sha2 = "0.10"
base58 = "0.1"
bitcoin = { version = "0.30", features = ["base64", "serde"] }
config = "0.15.19"
